--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<main>
-            <p>This is the main container element</p>
+            This is the main container element
         </main>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
