--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<main>
-            This is the main container element
+            <div class="box">This is the main container element</div>
         </main>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
